--- a/public/stylesheets/flashcard_style.css
+++ b/public/stylesheets/flashcard_style.css
@@ -11,11 +11,12 @@
   font-weight: bold;
 }
 
+
 body{
-  background: #2C3E50;
+  background: #554236;
   font-family: "ostrich";
-  font-size:15pt;
-  color:#E87E04;
+  font-size:20px;
+  color:#554236;
 }
 
 h1 {
@@ -23,13 +24,15 @@ h1 {
   font-size:3em;
   width:40%;
   margin: auto;
+  color:#F77825;
 }
 
 .tile{
   width:125px;
   height:125px;
   margin:20px;
-  border: 1px solid #000;
+  border: 5px solid #D3CE3D;
+  background: #60B99A;
   float:left;
 }
 .tile h3{
@@ -38,7 +41,7 @@ h1 {
 }
 
 .tile:hover{
-  background-color:teal;
+  background-color: #F77825;
   cursor:pointer;
 }
 
@@ -46,7 +49,7 @@ h1 {
   background: #fff;
   position: fixed;
   top: 100px;
-  left:25%;
+  left:20%;
   z-index: 100;
   height:0px;
   width: 50%;
@@ -57,16 +60,36 @@ h1 {
   width: 50%;
   margin: 0 auto;
   padding: 50px;
-  background: #ccc;
+  background: #333;
+  color: #F77825;
+  border: 2px solid #F77825;
   position:fixed;
+}
+
+.quizCard span{
+  font-size:2em;
+  color:#60B99A;
+  font-family: "ostrich"
 }
 
 .closeBtn {
  position:absolute;
- top: 0px;
- right: 0px;
+ top: 10px;
+ right: 10px;
  height:25px;
  width:25px;
  background-image: url("../images/Close-128.png");
  background-size: cover;
+}
+
+.blitzBtn{
+  font-family: "ostrichBold";
+  position:absolute;
+  top:10px;
+  right:10px;
+  color:#fff;
+  background:#F77825;
+  font-size:36px;
+  text-decoration: none;
+  padding:10px;
 }
